--- a/React/Hw1/package.json
+++ b/React/Hw1/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node app"
+    "start": "node index"
   },
   "author": "mine",
   "license": "ISC",
